src/test/ui/feature-gates/feature-gate-c_variadic.stderr
error[E0658]: C-variadic functions are unstable
  --> $DIR/feature-gate-c_variadic.rs:3:1
   |
LL | pub unsafe extern "C" fn test(_: i32, ap: ...) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44930 <https://github.com/dust-lang/dust/issues/44930> for more information
   = help: add `#![feature(c_variadic)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
